@@ -12,6 +12,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import java.util.ArrayList;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -65,14 +66,9 @@ private UserMapper userMapper;
 
         try {
             List<User> users =repo.findAllByRole(FREELANCER);
-            List<UserDto> userDtos = users.stream().map(userMapper::mapToUserDtoCard).toList();
-            List<UserDto> topFreelancer = new ArrayList<>();
-            for (UserDto userDto : userDtos) {
-                if(userDto.getProfileDtoForCard().getRating()>=4) {
-                    topFreelancer.add(userDto);
-                }
-            }
-            return topFreelancer.stream().limit(6).collect(Collectors.toList());
+            List<UserDto> userDtos = users.stream().map(userMapper::mapToUserDtoCard).filter(u -> u.getProfileDtoForCard().getRating() > 0.0)
+                    .collect(Collectors.toList());
+            return userDtos.stream().sorted(Comparator.comparing((UserDto userDto) -> userDto.getProfileDtoForCard().getRating()).reversed()).limit(6).collect(Collectors.toList());
 
         }
         catch (NoContentException e){
